feat(test): adding video uploads
