# api/router.go
@@ -28,6 +28,7 @@ func NewRouter(log *logger.MultiLogger) *chi.Mux {
 
 	r.Get("/health", handlers.HealthCheck)
 	r.Get("/socket", handlers.VideoSocketHandler)
+	r.Post("/upload", handlers.VideoUploadHandler)
 
 	return r
 }
